Instala e configura o Django Rest Framework

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ python-decouple = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
 whitenoise = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 pytest-django = "*"
