Cria logs das alterações de status dos pagamentos
close
#30

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ dj-database-url = "*"
 psycopg2-binary = "*"
 whitenoise = "*"
 djangorestframework-simplejwt = "*"
+django-db-logger = "*"
 
 [dev-packages]
 pytest-django = "*"
