Envia emails em cada alteração do pagamento via celery
close
#32

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ psycopg2-binary = "*"
 whitenoise = "*"
 djangorestframework-simplejwt = "*"
 django-db-logger = "*"
+celery = "*"
+redis = "*"
 
 [dev-packages]
 pytest-django = "*"
