--- a/contrib/.env-sample
+++ b/contrib/.env-sample
@@ -1,4 +1,19 @@
+# DJANGO
 DEBUG=False
 SECRET_KEY=DEFINE_YOUR_SECRET_KEY
 ALLOWED_HOSTS=127.0.0.1, localhost
+
+# LOG
 LOG=db_log
+
+# CELERY
+BROKER_URL=
+
+# EMAIL
+DEFAULT_FROM_EMAIL=foo@bar.com
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+EMAIL_HOST=localhost
+EMAIL_PORT=25
+EMAIL_USE_TLS=False
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
