--- a/contrib/.env-sample
+++ b/contrib/.env-sample
@@ -7,7 +7,7 @@ ALLOWED_HOSTS=127.0.0.1, localhost
 LOG=db_log
 
 # CELERY
-BROKER_URL=
+BROKER_URL=redis://127.0.0.1:6379
 
 # EMAIL
 DEFAULT_FROM_EMAIL=foo@bar.com
